Fix alignment

--- a/plugins/woocommerce-blocks/assets/js/blocks/product-gallery/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/product-gallery/style.scss
@@ -173,6 +173,7 @@ $full-height-mobile-admin-bar: calc($full-height-desktop - $admin-bar-mobile-hei
 // Next/Previous Buttons
 #{$next-previous} {
 	display: flex;
+	align-items: flex-end;
 	position: absolute;
 	flex-direction: row;
 	justify-content: space-between;
